--- a/signin/index.html
+++ b/signin/index.html
@@ -11,41 +11,30 @@
     <meta property="og:site_name" content="Starbucks" />
     <meta property="og:title" content="Starbucks Coffee Korea" />
     <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
-    <meta property="og:image" content="./images/starbucks_seo.jpg" />
+    <meta property="og:image" content="../images/starbucks_seo.jpg" />
     <meta property="og:url" content="https://starbucks.co.kr" />
 
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="Starbucks" />
     <meta property="twitter:title" content="Starbucks Coffee Korea" />
     <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
-    <meta property="twitter:image" content="./images/starbucks_seo.jpg" />
+    <meta property="twitter:image" content="../images/starbucks_seo.jpg" />
     <meta property="twitter:url" content="https://starbucks.co.kr" />
 
 
     <title>Starbucks Coffee Korea</title>
-    <link rel="icon" href="./favicon.png">
+    <link rel="icon" href="../favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/common.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 
 
-    <!-- SWIPTER -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- ScrollMagic -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js" integrity="sha512-1OG9UO4krPizjtz/c9iDbjCqtXznBYdJeD4ccPaYfJHzC6F1qoQ3P1bgQ3J8lgCoK5qGVCqsY4+/RKjLDzITVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <script defer src="./js/youtube.js"></script>
-    <script defer src="./js/main.js"></script>
+    
+    <script defer src="../js/common.js"></script>
   </head>
 
   <body>
@@ -54,7 +43,7 @@
       <div class="inner">
 
         <a href="/" class="logo">
-          <img src="./images/starbucks_logo.png" alt="STARBUCKS">
+          <img src="../images/starbucks_logo.png" alt="STARBUCKS">
         </a>
 
         <div class="sub-menu">
@@ -381,18 +370,10 @@
         </ul>
       </div>
 
-      <div class="badges">
-        <div class="badge">
-          <img src="./images/badge3.jpg" alt="Badge">
-        </div>
-        <div class="badge">
-          <img src="./images/badge2.jpg" alt="Badge">
-        </div>
-      </div>
     </header>
 
 
-
+    <section class="sign-in"></section>
 
 
     <!-- FOOTER -->
@@ -437,7 +418,7 @@
           &copy; <span class="this-year"></span> Starbucks Coffee Company, All Rights Reserved.
         </p>
 
-        <img src="./images/starbucks_logo_only_text.png" alt="" class="logo"/>
+        <img src="../images/starbucks_logo_only_text.png" alt="" class="logo"/>
       </div>
     </footer>
 
